[tool.poetry]
name = "winter"
version = "19.0.1"
homepage = "https://github.com/WinterFramework/winter"
description = "Web Framework with focus on python typing, dataclasses and modular design"
authors = ["Alexander Egorov <mofr@zond.org>"]
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Development Status :: 3 - Alpha',
    'Operating System :: OS Independent',
    'Environment :: Web Environment',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Framework :: Django',
    'Framework :: Django :: 1.11',
    'Framework :: Django :: 2.0',
    'Framework :: Django :: 2.1',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
]
packages = [
    { include = "winter" },
    { include = "winter_ddd" },
    { include = "winter_django" },
    { include = "winter_openapi" },
    { include = "winter_sqlalchemy" },
]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=1.11.16, <3.0.0"
docstring-parser = ">=0.1"
furl = "2.0.0"
python-dateutil = "2.8.0"
injector = "0.15.0"
SQLAlchemy = "~=1.3"
typing-extensions = "4.5.0"
StrEnum = "^0.4.8"
openapi-schema-pydantic = "^1.2.4"
openapi-spec-validator = "^0.5.7"
uritemplate = "^4.1.1"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
flake8 = "3.7.7"
flake8-commas = "2.0.0"
flake8-formatter-abspath = "1.0.1"
pre-commit-hooks = "2.2.3"
freezegun = "0.3.15"
mock = "2.0.0"
pytest = "6.2.5"
pytest-pythonpath = ">=0.7.1"
pytest-cov = ">=2.5.1"
pytest-django = ">=3.2.0"
semver = "2.8.1"
add-trailing-comma = "1.3.0"
pre-commit = "1.17.0"
lxml = "^4.9.1"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"
