[tool.poetry]
name = "winter"
version = "25.0.0"
homepage = "https://github.com/WinterFramework/winter"
description = "Web Framework with focus on python typing, dataclasses and modular design"
authors = ["Alexander Egorov <mofr@zond.org>"]
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Development Status :: 3 - Alpha',
    'Operating System :: OS Independent',
    'Environment :: Web Environment',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3',
    'Framework :: Django :: 4',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
]
packages = [
    { include = "winter" },
    { include = "winter_ddd" },
    { include = "winter_django" },
    { include = "winter_openapi" },
    { include = "winter_sqlalchemy" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = [
    {version = ">=4.2, <5", python = ">=3.12"},
    {version = ">=1.11.16, <3.0.0", python = "<3.12"}
]
docstring-parser = ">=0.1"
furl = ">=2.0.0, <3"
python-dateutil = "^2.8.2"
injector = ">=0.15.0, <1"
SQLAlchemy = [
    {version = "~1.4", python = ">=3.12"},
    {version = "~1.3", python = "<3.12"}
]
typing-extensions = "^4.8"
StrEnum = "^0.4.8"
openapi-pydantic = ">=0.4.1, <1"
pydantic = ">=1.10, <2"
openapi-spec-validator = [
    {version = ">=0.7.1, <1", python = ">=3.12"},
    {version = "^0.5.7", python = "<3.12"}
]
uritemplate = ">=4.1.1, <5"
httpx = ">=0.24.1, <1"

[tool.poetry.dev-dependencies]
flake8 = ">=3.7.7, <4"
flake8-commas = ">=2.0.0, <4"
flake8-formatter-abspath = ">=1.0.1, <2"
pre-commit-hooks = ">=2.2.3, <3"
freezegun = ">=0.3.15, <1"
mock = ">=2.0.0, <3"
pytest = ">=6.2.5, <7"
pytest-pythonpath = ">=0.7.1"
pytest-cov = ">=2.5.1, <3"
pytest-django = ">=3.2.0, <4"
semver = ">=2.8.1, <3"
add-trailing-comma = ">=1.3.0, <2"
pre-commit = ">=1.17.0, <2"
lxml = ">=4.9.1, <6.0.0"

pytz = [
    {version = ">=2024.1", python = ">=3.12"},
    {version = ">=2020.5", python = "<3.12"}
]

[tool.poetry.group.dev.dependencies]
setuptools = "^71.1.0"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"
