[tool.poetry]
name = "winter"
version = "31.0.1"
homepage = "https://github.com/WinterFramework/winter"
description = "Web Framework with focus on python typing, dataclasses and modular design"
authors = ["Alexander Egorov <mofr@zond.org>"]
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Development Status :: 3 - Alpha',
    'Operating System :: OS Independent',
    'Environment :: Web Environment',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Framework :: Django',
    'Framework :: Django :: 4',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
]
packages = [
    { include = "winter" },
    { include = "winter_ddd" },
    { include = "winter_django" },
    { include = "winter_openapi" },
    { include = "winter_sqlalchemy" },
]

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=4.2,<5"
docstring-parser = ">=0.1"
furl = ">=2.0.0, <3"
python-dateutil = "^2.8.2"
injector = ">=0.15.0, <1"
SQLAlchemy = ">=1.4, <2"
typing-extensions = "^4.8"
StrEnum = "^0.4.8"
openapi-pydantic = ">=0.5.0, <0.6"
pydantic = ">=1.10, <2"
openapi-spec-validator = ">=0.5.7, <1"
uritemplate = "==4.2.0"  # Lib doesn't follow semantic versioning
httpx = ">=0.24.1, <0.28"
redis = "^6.2.0"

[tool.poetry.dev-dependencies]
flake8 = ">=3.7.7, <4"
flake8-commas = ">=2.0.0, <4"
flake8-formatter-abspath = ">=1.0.1, <2"
pre-commit-hooks = ">=2.2.3, <3"
freezegun = ">=1.5.1, <2"
mock = ">=2.0.0, <3"
pytest = ">=6.2.5, <7"
pytest-pythonpath = ">=0.7.1"
pytest-cov = "^6.0.0"
pytest-django = ">=3.2.0, <4"
semver = ">=2.8.1, <3"
add-trailing-comma = ">=1.3.0, <2"
pre-commit = ">=1.17.0, <2"
lxml = ">=4.9.1, <6.0.0"
pytz = ">=2020.5"

[tool.poetry.group.dev.dependencies]
setuptools = "^71.1.0"
testcontainers = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"
